# blaseball.vcr

./: .gitignore  Vcr.toml
.cargo/: config.toml
build-tools/: build.py  config.kdl  season_boundaries.py  seasons.list.txt  stream_data_schema.zsh
build-tools/tools/: dict.py  record.py
encoder/: Cargo.toml  seasons.json
encoder/src/: lib.rs
player/src/: main.rs  paging.rs
player/src/v1/: api.rs
player/src/v2/: api.rs
vcr-lib/: Cargo.toml
vcr-lib/src/: chron_types.rs  err.rs  etypes.rs  lib.rs  utils.rs
vcr-lib/src/feed/: header.rs  index.rs
vcr-lib/src/stream_data/: db.rs  mod.rs  thisidisstaticyo.rs
vcr-lib/src/vhs/: db.rs  mod.rs  recorder.rs
vcr-lib/src/vhs/tributes/: mod.rs
vcr-lookups/: Cargo.toml
vcr-lookups/src/: uuid_shell.rs
vcr-schemas/: Cargo.toml
vcr-schemas/src/: lib.rs
vcr-schemas/src/schemas/: attributes.rs  availablechampionbets.rs  bonusresult.rs  bossfight.rs  championcallout.rs  communitychestprogress.rs  dayssincelastincineration.rs  decreeresult.rs  division.rs  eventresult.rs  fanart.rs  feedseasonlist.rs  fuelprogress.rs  game.rs  gamestatsheet.rs  gammabracket.rs  gammaelection.rs  gammaelectiondetails.rs  gammaelectionresults.rs  gammaelections.rs  gammasim.rs  giftprogress.rs  globalevents.rs  glossarywords.rs  idols.rs  item.rs  league.rs  librarystory.rs  mod.rs  nullified.rs  offseasonrecap.rs  offseasonsetup.rs  peanutpower.rs  player.rs  playerstatsheet.rs  playoffmatchup.rs  playoffround.rs  playoffs.rs  renovationprogress.rs  risingstars.rs  (+21 more)
