[package]
name = "new-encoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zstd = { version = "0.13", features = ["experimental", "zdict_builder"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.64", features = ["raw_value"] }
anyhow = "1"
uuid = "1.10"
blaseball_vcr = { path = "../vcr-lib" }
indicatif = "0.17.0-beta.1"
clap = "2.33.3"
tempfile = "3.3.0"
vhs-diff = { git = "https://github.com/emily-signet/vhs-diff.git" }
rmp-serde = "=0.15"
bsdiff = "0.1.6"
perfect-map = { git = "https://github.com/emily-signet/perfect-map.git", version = "0.1.0" }
vcr-lookups = { path = "../vcr-lookups" }
vcr-schemas = { path = "../vcr-schemas" }
blake2s_simd = "1.0.1"
iso8601-timestamp = "0.2.17"
humansize = { version = "2.1.3" }
redb = "2.1.1"
borsh = { version = "1.5.1", features = ["borsh-derive"] }
regex = "1.10.5"
futures-util = "0.3.30"
simd-json = "0.13.10"
genson-rs = "0.2.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
serde_path_to_error = "0.1.16"
assert-json-diff = "2.0.2"
bitcode = "0.6.3"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "blocking", "rustls-tls"]

[dependencies.tokio]
version = "1"
features = ["full"]
