[package]
name = "vcr-schemas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automod = "1.0.8"
serde = { version = "1.0.164", features = ["derive"] }
vhs-diff = { git = "https://github.com/emily-signet/vhs-diff.git" }
vcr-lookups = { path = "../vcr-lookups" }
serde_json = { version = "1.0.97", features = ["raw_value"] }
uuid = { version = "1.10", features = ["serde", "borsh"] }
smallvec = "1.10.0"
borsh = { version = "1.5.1", features = ["borsh-derive", "derive"] }
strum = { version = "0.26.3", features = ["derive"] }
